Working product, changed resetting circuit logic via reopening selenium driver

--- a/src/config.yaml
+++ b/src/config.yaml
@@ -1,4 +1,4 @@
-downloads_folder_path: 'C:\Users\obroc\Downloads'
+downloads_folder_path: 'C:\Users\obroc\Music\bangersonly'
 setlist_path: 'C:\Users\obroc\Music\bangersonly\mix_30_04\setlist.txt'
 tor_browser_path: 'C:\Users\obroc\Desktop\Tor Browser\Browser\firefox.exe'
 tor_profile_path: 'C:\Users\obroc\Desktop\Tor Browser\Browser\TorBrowser\Data\Browser\profile.default'
