--- a/src/config.yaml
+++ b/src/config.yaml
@@ -3,3 +3,4 @@ setlist_path: 'C:\Users\obroc\Music\bangersonly\mix_30_04\setlist.txt'
 tor_browser_path: 'C:\Users\obroc\Desktop\Tor Browser\Browser\firefox.exe'
 tor_profile_path: 'C:\Users\obroc\Desktop\Tor Browser\Browser\TorBrowser\Data\Browser\profile.default'
 gecko_driver_path: 'C:\Users\obroc\Documents\workspace\yout_downloader\geckodriver.exe'
+download_limit: 2
